[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlformatter"
version = "0.2.9"
authors = [
    { name = "P. Andreas Moeller", email = "kontakt@pamoller.com" },
]
description = "Format and compress XML documents"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.2"

[project.urls]
Homepage = "http://pamoller.com/xmlformatter.html"

[project.scripts]
xmlformat = "xmlformatter:cli"

[tool.setuptools]
py-modules = ["xmlformatter"]
